kuard.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: kuard
# spec:
#   selector:
#     matchLabels:
#       app: kuard
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: kuard
#     spec:
#       containers:
#         - image: gcr.io/kuar-demo/kuard-amd64:1
#           imagePullPolicy: Always
#           name: kuard
#           ports:
#             - containerPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: kuard
# spec:
#   ports:
#     - port: 80
#       targetPort: 8080
#       protocol: TCP
#   selector:
#     app: kuard
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kuard
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     #cert-manager.io/issuer: "letsencrypt-staging"

# spec:
#   tls:
#     - hosts:
#         - kuard.aks.ez-lab.xyz
#       secretName: quickstart-example-tls
#   rules:
#     - host: kuard.aks.ez-lab.xyz
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: kuard
#                 port:
#                   number: 80
# ---
# apiVersion: cert-manager.io/v1
#    kind: Issuer
#    metadata:
#      name: letsencrypt-staging
#    spec:
#      acme:
#        # The ACME server URL
#        server: https://acme-staging-v02.api.letsencrypt.org/directory
#        email: user@example.com
#        # Name of a secret used to store the ACME account private key
#        privateKeySecretRef:
#          name: letsencrypt-staging
#        # Enable the HTTP-01 challenge provider
#        solvers:
#        - http01:
#            ingress:
#              class:  nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"

spec:
  tls:
    - hosts:
        - kuard.aks.ez-lab.xyz
      secretName: quickstart-example-tls
  rules:
    - host: kuard.aks.ez-lab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 80
