sample-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  labels:
    app: nginx
    name: sample
spec:
  containers:
  - name: main
    image: nginx:alpine
    resources:
      limits:
        memory: "64Mi"
        cpu: "200m"
      requests:
        memory: "48Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: nginx
    name: sample
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-rule
  namespace: nginx-ingress
  annotations:
    # kubernetes.io/ingress.class: ngin
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/acme-challenge-type: dns01
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - hello.aks.ez-lab.xyz
    secretName: hello-secret-tls
  rules:
    - host: "hello.aks.ez-lab.xyz"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: web
                port:
                  number: 8080
