wiki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-rule
  namespace: wikijs
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "wiki.aks.ez-lab.xyz"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: lab-wiki
                port:
                  number: 3000
